# java-packager

./: .gitignore  README.md  pom.xml
assets/launcher/: shortcut.lua
assets/skin/default/: stage.css  stage.less
launcher/: CMakeLists.txt  README.md
launcher/src/: Launcher.cpp  Platform.cpp  Platform.h  WinNativeHandler.cpp  WinNativeHandler.h
src/main/java/: module-info.java
src/main/java/org/swdc/packager/: Launcher.java  PackagerApplication.java  PackagerConfigure.java  SplashView.java
src/main/java/org/swdc/packager/core/: EMProvider.java  FileUtils.java  JavaSysModule.java  LangKeys.java  Language.java  PackageConfig.java  PackageProject.java
src/main/java/org/swdc/packager/core/builder/: JavaExecuteLauncher.java  JavaModuleExtractor.java  JavaRuntimeLinker.java  JavaVersionExtractor.java  ProcessExecutor.java
src/main/java/org/swdc/packager/core/entity/: JavaEnvironment.java  JavaFXEnvironment.java
src/main/java/org/swdc/packager/core/repo/: JavaEnvironmentRepo.java  (+1 more)
src/main/java/org/swdc/packager/views/: JavaEnvManageView.java  JavaEnvManagerController.java  JavaFXEnvManagerController.java  JavaFXEnvManagerView.java  ModEntity.java  PackagerConfView.java  PackagerConfigViewController.java  PackagerMainController.java  PackagerMainView.java  ProgressModal.java  TerminalController.java  TerminalView.java  VMOptionPair.java
src/main/resources/: hibernate.properties
src/main/resources/lang/: string_en.properties  string_zh.properties
src/main/resources/views/main/: ConfigView.fxml  JavaFXManageView.fxml  JavaManageView.fxml  PackagerMainView.fxml  ProgressModal.fxml  TerminalView.fxml
(+7 files in other folders)
